--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/native-stack": "^6.9.8",
     "@react-navigation/stack": "^6.3.11",
     "expo": "~47.0.12",
+    "expo-linking": "^3.3.0",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
@@ -22,7 +23,7 @@
     "react-native-screens": "~3.18.0",
     "react-native-web": "~0.18.9",
     "react-native-web-webview": "^1.0.2",
-    "react-native-webview": "^11.26.0",
+    "react-native-webview": "11.23.1",
     "react-native-youtube-iframe": "^2.2.2"
   },
   "devDependencies": {
