--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-web": "~0.18.9",
+    "react-native-web-hooks": "^3.0.2",
     "react-native-web-webview": "^1.0.2",
     "react-native-webview": "11.23.1",
-    "react-native-youtube-iframe": "^2.2.2"
+    "react-native-youtube-iframe": "^2.2.2",
+    "prop-types": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
