setup android/ios project

--- a/expo-handle-touch-view/example/package.json
+++ b/expo-handle-touch-view/example/package.json
@@ -28,7 +28,7 @@
   "private": true,
   "expo": {
     "autolinking": {
-      "nativeModulesDir": ".."
+      "nativeModulesDir": "../../expo-handle-touch-view"
     }
   }
 }
