--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "embeddedvideo",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -15,7 +14,9 @@
     "@react-navigation/stack": "^6.3.11",
     "expo": "~47.0.12",
     "expo-linking": "^3.3.0",
+    "expo-modules-core": "~1.0.4 || ~1.1.1",
     "expo-status-bar": "~1.4.2",
+    "prop-types": "*",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
@@ -26,7 +27,7 @@
     "react-native-web-webview": "^1.0.2",
     "react-native-webview": "11.23.1",
     "react-native-youtube-iframe": "^2.2.2",
-    "prop-types": "*"
+    "expo-splash-screen": "~0.17.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -37,7 +38,7 @@
   "private": true,
   "expo": {
     "autolinking": {
-      "nativeModulesDir": "./expo-handle-touch-view/"
+      "nativeModulesDir": "./expo-handle-touch-view"
     }
   }
 }
