--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-double-click": "^1.0.5",
+    "react-native-gesture-handler": "~2.8.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-web": "~0.18.9",
